# fmk-indiana

./: .gitignore  ACTION_PLAN.md  CLAUDE.md  Cargo.toml  DISTRO.md  FOCUS.md  FUNDAMENTALS.md  GOAL.md  MENTAL_MODEL.md  Makefile  PHASES.md  PROCESS_OVERVIEW.md  PURPOSE.md  README.md  TARGET_AUDIENCE.md  TODO.md  VISION.md  formula.rb.template  git.md  needs_to_be_done.md  plan-to-plan-i-cozy-lecun.md  skills-lock.json  test.md  tmp_challenge_menulet.md  tmp_menulet_challenge.md
.claude/commands/: new-indiana.md  release.md
.github/workflows/: ci.yml  release.yml
.indiana/: FRONTMATTER.md
.indiana/casablanca/: settings.json
.indiana/chief-of-staff/: focus.md  log.md  tasks.md
.indiana/context-model/: CONTEXT-MODEL.md  INDIANA.md  index.md  log.md
.indiana/indianas/: RULES.md
.indiana/montmartre/: README.md
.old/: ITERATION-GUIDE.md  OLD_CLAUDE.md
.omp/: README.md
CASABLANCA/: CASABLANCA_PRD.md
INDIANA/: IN_COMMANDS.md  IN_DAEMON.md  IN_IDENTITY.md  IN_LINE.md  IN_MCP.md  IN_SCAN.md  IN_SCOPE.md  IN_TEST.md
MENULET/: MENULET_PRD.md  MENULET_RUNBOOK.md  MENULET_UI.md  package-lock.json  package.json  vite.config.js
MENULET/src/: index.html  main.js
MENULET/src-tauri/: Cargo.toml  tauri.conf.json
MENULET/src-tauri/capabilities/: default.json
MENULET/src-tauri/src/: lib.rs  main.rs  protocol.rs  socket.rs
META_MODEL/: MM_PRD.md
crates/casablanca/: README.md  TASKS.md  electron.vite.config.ts  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
crates/core/: Cargo.toml  prompts.toml
crates/core/src/: agents.rs  compile.rs  cos.rs  cursor.rs  frontmatter.rs  id.rs  index.rs  lib.rs  markers.rs  parser.rs  scope.rs  system_prompt.rs  templates.rs  walk.rs  write.rs
crates/core/templates/: agent_run_coda.md  autorun_coda.md  group_run_coda.md  preamble.md  system_prompt.md
crates/core/templates/agents/lisa/: system_prompt.md
crates/core/templates/agents/mike/: system_prompt.md
crates/core/templates/chief-of-staff/: README.md  log.md  tasks.md
crates/core/templates/context-model/: CONTEXT-MODEL.md
crates/core/templates/indianas/hate/: prompt.md
crates/core/templates/indianas/love/: prompt.md
crates/core/templates/indianas/note/: prompt.md
crates/core/templates/indianas/prompt/: prompt.md
crates/core/templates/indianas/question/: prompt.md  prompt_empty.md
crates/core/templates/indianas/todo/: prompt.md
crates/indiana/: Cargo.toml
crates/indiana-protocol/: Cargo.toml
crates/indiana/src/: acp.rs  casablanca.rs  config.rs  copied.rs  daemon.rs  dispatch.rs  lib.rs  main.rs  mcp.rs  paths.rs  protocol.rs  run_record.rs  service.rs  todos.rs
crates/indiana/tests/: autorun.rs  cli.rs  cli_help.snap  daemon.rs  mcp.rs  protocol_roundtrip.rs  task.rs  todo.rs
crates/menulet/: package-lock.json  package.json
crates/menulet/src-tauri/: Cargo.toml  tauri.conf.json
crates/menulet/src-tauri/src/: main.rs  socket.rs
docs/: AGENT_CODING.md  AGENT_COMMIT.md  AGENT_OPERATING.md  AGENT_WRITING.md  ARCHITECTURE.md  DISTRO.md  GOAL.md  PHASES.md  PURPOSE.md  SHIP.md  temp_system.md
docs/bangalore-menulet/: MENULET_LOGO.md  MENULET_PRD.md
docs/casablanca/: RELEASE_FIX.md  (+7 more)
fundamentals/: CONE_SHAPED_TREE_ARCHITECTURE.md  CONTENT_OVER_CHAT.md  DOCUMENT_WHY_NOT_WHAT.md  DOMAIN_ARCHITECTURE_OVER_TECH.md  ELEPHANT_PRINCIPLE.md  FILE_LIFE_CYCLE_MANAGEMENT.md  FOLDER_IS_THE_UNIT_OF_WORK.md  FRONTMATTER_ON_EVERY_FILE.md  FULL_DEPENDENCY_MANAGEMENT.md  HARNESS_AGNOSTIC.md  KNOWLEDGE_COMPOUNDS_THROUGH_LOOPS.md  MARKDOWN_AS_CODE.md  PROMOTE_NEVER_FORK.md  SINGLE_SOURCE_OF_TRUTH.md
plans/: acp-from-zed-lets-composed-cat.md  check-indiana-i-want-delegated-cray.md  cli_copy_filters_805e7251.plan.md  copy_latest_cursor_f82456a5.plan.md  glowing-nibbling-hanrahan.md  i-want-to-make-wise-glacier.md  menulet_layout_refresh_a9c197a6.plan.md  plan-a-plan-to-swift-meadow.md  task-1-vision-document-hazy-hopcroft.md  vast-bouncing-bubble.md  we-just-did-this-smooth-dewdrop.md
rules/: template_todo.md
(+152 files in other folders)
