[workspace]
resolver = "2"
members = ["crates/core", "crates/indiana"]

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["Niklas Ingvar <niklas.ingvar@gmail.com>"]

# Single static-ish artifact for dogfood (DISTRO.md): small, no debug bloat.
[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
