[workspace]

[package]
name = "indiana-menulet"
version = "0.1.0"
edition = "2021"

[lib]
name = "indiana_menulet_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indiana-protocol = { path = "../../crates/indiana-protocol" }
