[package]
name = "indiana-core"
version = "0.2.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "indiana_core"
path = "src/lib.rs"

[dependencies]
ignore = "0.4"
serde = { version = "1", features = ["derive"] }
fastrand = "2"
tempfile = "3"
serde_yml = "0.0.13"
