[package]
name = "indiana"
version = "0.0.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "indiana"
path = "src/main.rs"

[dependencies]
indiana-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-full = "0.3"
arboard = "3.6.1"
