[package]
name = "indiana"
version = "0.3.0"
default-run = "indiana"
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "indiana"
path = "src/lib.rs"

[[bin]]
name = "indiana"
path = "src/main.rs"

# Test-only mock ACP agent for the auto-run integration test (IN_AUTORUN.md).
# Behind a feature so it is never built into a release or shipped.
[[bin]]
name = "mock-acp-agent"
path = "src/bin/mock_acp_agent.rs"
required-features = ["test-support"]

[features]
# Enables test-only helper binaries. Off by default.
test-support = []

[dependencies]
indiana-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "6"
notify-debouncer-full = "0.3"
indiana-protocol = { path = "../indiana-protocol" }
arboard = "3.6.1"
rusqlite = { version = "0.40.1", features = ["bundled"] }

[dev-dependencies]
tempfile = "3"
